# svgar

./: .gitignore  .npmignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: deploy.yml  test.yml
data/: LineCurve.json  README.md
rs/: Cargo.toml
rs/src/: lib.rs  transform.rs
rs/tests/: web.rs
src/: index.ts
src/geometry/: SvgarGeometry.ts
src/geometry/rhino/: LineCurve.ts
src/geometry/svgar/: Box.ts  LineCurve.ts  Polyline.ts  Sphere.ts
src/models/: SomeClass.spec.ts  SomeClass.ts  SvgarCamera.spec.ts  SvgarCamera.ts  SvgarCameraContext.spec.ts  SvgarCameraContext.ts  SvgarCube.spec.ts  SvgarCube.ts  SvgarElement.spec.ts  SvgarElement.ts  SvgarElementsContext.spec.ts  SvgarElementsContext.ts  SvgarMaterial.ts
src/primitives/: Interval.ts  Point3f.ts
src/rs/: lib.rs
src/services/: CreamService.spec.ts  CreamService.ts  RhinoService.ts
src/typings/: rhino3dm.d.ts
ts/: package-lock.json  package.json  tsconfig.json  tsconfig.test.json
ts/src/: index.spec.ts  index.ts
ts/src/enums/: GeometryType.ts  TransformType.ts  index.ts
ts/src/models/: SvgarCube.ts  SvgarElement.ts
