[package]
name = "rust-wasm"
version = "0.1.0"
authors = ["Chuck <cdriesler.iv@gmail.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/cdriesler/rust-wasm-ts-module"

[lib]
crate-type = ["cdylib"]
path = "src/rs/lib.rs"

[dependencies]
wasm-bindgen = "0.2"

