[package]
name = "rsvg"
version = "0.6.0"
authors = ["chuck <cdriesler.iv@gmail.com>"]
description = "geometry library for svgar"
license = "AGPL-3.0"
repository = "https://github.com/cdriesler/svgar"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
ndarray = "0.13.1"
console_error_panic_hook = "0.1.6"
uuid = { version = "0.8", features = ["v4", "wasm-bindgen"]}
wasm-bindgen = "0.2.64"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"